# Group-Work-Favorita-Forecasting

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md
data/: README.md
img/: README.md
models/: README.md
notebooks/: README.md
src/: README.md
src/Favorita_TSA/: README.md
tests/: README.md  test_main.py
